TestRepo2/src/objects/Convert_Measurements__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>T-104879-Add Measurement Conversion button to MM_ViewRecipe</description>
    <fields>
        <fullName>Mils__c</fullName>
        <label>Mils</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5Mils__c</fullName>
        <label>5Mils</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fl_Oz__c</fullName>
        <label>fl Oz.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mL__c</fullName>
        <label>mL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Convert Measurements</label>
</CustomObject>